Made changes to meet requirements. Modifications to attempt to host on heroku.

--- a/frontend/src/main/components/App.css
+++ b/frontend/src/main/components/App.css
@@ -22,8 +22,8 @@
   font-size: large;
 }
 
-.App-inputs>Input {
-  padding-right: 10px;
+.App-inputs #appFilter {
+  padding-right: 15px;
 }
 
 @keyframes App-logo-spin {
